fixtures/frontend/milestone-1/invalid/pattern_non_exhaustive_sum.aivi
type Status =
  | Paid
  | Pending
  | Failed Text

fun statusLabel:Text status:Status =>
    status
     ||> Paid => "paid"
